# autoresearch-commons

./: .gitignore  LICENSE  README.md  commons.py  director.md  director.py  platform_utils.py  program.md  pyproject.toml  test_commons.py  test_director.py  test_platform.py  train.py
knowledge/: index.json  queue.json
knowledge_capsule/: __init__.py  causal_analyzer.py  confidence_tracker.py  lifecycle_tracker.py
