[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous pretraining research swarm — with collaborative knowledge protocol"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "torch>=2.6.0",
    "pytest>=8.0.0",
]

[project.optional-dependencies]
cuda = ["kernels>=0.11.7"]

[tool.pytest.ini_options]
testpaths = ["."]
pythonpath = ["."]
